# genai_25_sept

./: README.md  hugging_face_connection.ipynb  main.py  ollama_connection.ipynb  pyproject.toml  test_openai.ipynb  test_openai_groq.ipynb
langchain/: chat_ollama_llm.ipynb  chatprompt_template_practice.ipynb  few_shot_prompting.ipynb  indian_financial_prompt_engineering.ipynb  messages.ipynb  prompt_engineering_financial_tutorial.ipynb  prompt_enginnering_example.ipynb  prompt_enginnering_l1.ipynb  prompt_template.ipynb  simple_prompt_engineering_types.ipynb  zero_shot_prompting.ipynb
langchian/: chat_openai_llm.ipynb  chat_prompt_template.ipynb
