[project]
name = "genai-25-sept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "groq>=0.31.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "ollama>=0.5.4",
    "openai>=1.107.3",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
